owl-parser/src/parser/snapshots/ella_parser__parser__expr__tests__fn-call.snap
---
source: owl-parser/src/parser/expr.rs
expression: "expr(\"foo()\")"
---
Expr {
    kind: FnCall {
        callee: Expr {
            kind: Identifier(
                "foo",
            ),
            span: 0..3,
        },
        args: [],
    },
    span: 0..5,
}
