owl-parser/src/parser/snapshots/ella_parser__parser__expr__tests__redundant-escape-sequences-string.snap
---
source: owl-parser/src/parser/expr.rs
expression: "expr(r#\"\"a\\aa\"\"#)"
---
Expr {
    kind: StringLit(
        "aaa",
    ),
    span: 0..6,
}
