owl-parser/src/parser/snapshots/ella_parser__parser__expr__tests__simple-string.snap
---
source: owl-parser/src/parser/expr.rs
expression: "expr(r#\"\"abc\"\"#)"
---
Expr {
    kind: StringLit(
        "abc",
    ),
    span: 0..5,
}
